--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,6 @@
-.gallery {
-  display: flex;
-  list-style: none;
+body {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
   padding: 0;
-}
-
-.gallery-item {
-  margin-right: 10px;
-}
-
-.gallery-item img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-}
-
-#boxes {
-  display: flex;
-  justify-content: space-around;
-}
-
-.box {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
 }
